# RegexScript

./: .gitmodules  CMakeLists.txt  README.md  build-static.sh.bat  config-debug-mingw.bat  config-debug-travis.sh  config-debug-unix.sh  run.sh.bat
src/: main.cpp
std/: core.regs  inout.regs  logic.regs  math.regs
